--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -19,7 +19,7 @@
 // Large screens
 @media only screen and (min-width: 64.063em) {
   .b-content-section {
-    padding-top: 120px;
+    padding-top: 60px;
     padding-bottom: 120px;
 
     .e-section-title {
