--- a/_sass/_services.scss
+++ b/_sass/_services.scss
@@ -5,3 +5,10 @@
 .b-services h2 {
   text-align: center;
 }
+
+// Large screens
+@media only screen and (min-width: 64.063em) {
+  .b-services {
+    padding-top: 120px;
+  }
+}
